--- a/clinic-backend/package.json
+++ b/clinic-backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "dev": "npx tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
